--- a/games/armarserver/armar.toml
+++ b/games/armarserver/armar.toml
@@ -3,7 +3,7 @@ name = "arma_reforger"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/armarserver"
 config_files = [
