--- a/games/bmdmserver/bmdm.toml
+++ b/games/bmdmserver/bmdm.toml
@@ -2,8 +2,8 @@
 name = "black_mesa_deathmatch"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/bmdmserver"
 config_files = [
