--- a/games/ckserver/ck.toml
+++ b/games/ckserver/ck.toml
@@ -2,8 +2,8 @@
 name = "core_keeper"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/ckserver"
 config_files = [
