--- a/games/cod4server/cod4.toml
+++ b/games/cod4server/cod4.toml
@@ -3,7 +3,7 @@ name = "call_of_duty_4_mw"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/cod4server"
 config_files = [
