--- a/games/csserver/cs.toml
+++ b/games/csserver/cs.toml
@@ -3,7 +3,7 @@ name = "counter_strike_16"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/csserver"
 config_files = [
