--- a/games/dayzserver/dayz.toml
+++ b/games/dayzserver/dayz.toml
@@ -2,8 +2,8 @@
 name = "day_z"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/dayzserver"
 config_files = [
