--- a/games/etlserver/etl.toml
+++ b/games/etlserver/etl.toml
@@ -3,7 +3,7 @@ name = "enemy_territory_legacy"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/etlserver"
 config_files = [
