--- a/games/fctrserver/fctr.toml
+++ b/games/fctrserver/fctr.toml
@@ -2,8 +2,8 @@
 name = "factorio"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/fctrserver"
 config_files = [
