--- a/games/gmodserver/gmod.toml
+++ b/games/gmodserver/gmod.toml
@@ -3,7 +3,7 @@ name = "garrys_mod"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/gmodserver"
 config_files = [
