--- a/games/hl2dmserver/hl2dm.toml
+++ b/games/hl2dmserver/hl2dm.toml
@@ -3,7 +3,7 @@ name = "half_life_2_deathmatch"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/hl2dmserver"
 config_files = [
