--- a/games/kf2server/kf2.toml
+++ b/games/kf2server/kf2.toml
@@ -2,8 +2,8 @@
 name = "killing_floor_2"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/kf2server"
 config_files = [
