--- a/games/l4d2server/l4d2.toml
+++ b/games/l4d2server/l4d2.toml
@@ -3,7 +3,7 @@ name = "left_4_dead_2"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/l4d2server"
 config_files = [
