--- a/games/mcbserver/mcb.toml
+++ b/games/mcbserver/mcb.toml
@@ -3,7 +3,7 @@ name = "minecraft_bedrock"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/mcbserver"
 config_files = [
