--- a/games/mcserver/mc.toml
+++ b/games/mcserver/mc.toml
@@ -3,7 +3,7 @@ name = "minecraft_java"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/mcserver"
 config_files = [
