--- a/games/mohaaserver/mohaa.toml
+++ b/games/mohaaserver/mohaa.toml
@@ -2,8 +2,8 @@
 name = "moh_allied_assault"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/mohaaserver"
 config_files = [
