--- a/games/pzserver/pz.toml
+++ b/games/pzserver/pz.toml
@@ -3,7 +3,7 @@ name = "project_zomboid"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/pzserver"
 config_files = [
