--- a/games/q3server/q3.toml
+++ b/games/q3server/q3.toml
@@ -2,8 +2,8 @@
 name = "quake_3_arena"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/q3server"
 config_files = [
