--- a/games/rtcwserver/rtcw.toml
+++ b/games/rtcwserver/rtcw.toml
@@ -3,7 +3,7 @@ name = "return_to_castle_wolfenstein"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/rtcwserver"
 config_files = [
