--- a/games/sdtdserver/sdtd.toml
+++ b/games/sdtdserver/sdtd.toml
@@ -3,7 +3,7 @@ name = "7_days_to_die"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkamtter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/sdtdserver"
 config_files = [
