--- a/games/sfserver/sf.toml
+++ b/games/sfserver/sf.toml
@@ -3,7 +3,7 @@ name = "satisfactory"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/sfserver"
 config_files = [
