--- a/games/ut99server/ut99.toml
+++ b/games/ut99server/ut99.toml
@@ -2,8 +2,8 @@
 name = "unreal_tournament_99"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/ut99server"
 config_files = [
