--- a/games/utserver/ut.toml
+++ b/games/utserver/ut.toml
@@ -2,8 +2,8 @@
 name = "unreal_tournament"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
-linked_repo = "docker"
+server = "darkmatter"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/utserver"
 config_files = [
