--- a/games/plutonium/codbo/bo.toml
+++ b/games/plutonium/codbo/bo.toml
@@ -3,7 +3,7 @@ name = "black_ops"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/plutonium"
 file_paths = ["compose-bo.yaml"]
