--- a/games/plutonium/codmw2/mw2.toml
+++ b/games/plutonium/codmw2/mw2.toml
@@ -3,7 +3,7 @@ name = "cod_mw2"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/plutonium"
 file_paths = ["compose-mw2.yaml"]
