--- a/games/plutonium/codwaw/waw.toml
+++ b/games/plutonium/codwaw/waw.toml
@@ -3,7 +3,7 @@ name = "cod_waw"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/plutonium"
 file_paths = ["compose-waw.yaml"]
