--- a/games/dodsserver/dods.toml
+++ b/games/dodsserver/dods.toml
@@ -3,7 +3,7 @@ name = "day_of_defeat_source"
 tags = ["ice", "games"]
 [stack.config]
 server = "darkmatter"
-linked_repo = "docker"
+linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/dodsserver"
 config_files = [
