--- a/games/sdtdserver/sdtd.toml
+++ b/games/sdtdserver/sdtd.toml
@@ -2,7 +2,7 @@
 name = "7_days_to_die"
 tags = ["ice", "games"]
 [stack.config]
-server = "darkamtter"
+server = "darkmatter"
 linked_repo = "game_servers"
 webhook_enabled = false
 run_directory = "games/sdtdserver"
